added RBAC, count based eviction and upgraded to version 1.74